force-app/main/default/objects/Truck__c/fields/Box_Build_Out_Abrahamson_Body_Equip__c.field-meta.xml
<CustomField>
    <fullName>Box_Build_Out_Abrahamson_Body_Equip__c</fullName>
    <description>The name of the company that did the Box-Build-Out of the truck 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>The name of the company that did the Box-Build-Out of the truck</inlineHelpText>
    <label>Box Build Out (Abrahamson Body &amp; Equip.)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>