force-app/main/default/objects/Truck__c/fields/Box_Refresh_Remodel_Date__c.field-meta.xml
<CustomField>
    <fullName>Box_Refresh_Remodel_Date__c</fullName>
    <description>Date Box of truck is due for a refresh or remodel
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Date Box of truck is due for a refresh or remodel</inlineHelpText>
    <label>Box Refresh/Remodel Date</label>
    <type>Date</type>
</CustomField>