force-app/main/default/objects/Truck__c/fields/Cost_of_Box_Marion_Body_Works__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Box_Marion_Body_Works__c</fullName>
    <description>Dollar Cost of Box creation, refresh or remodel
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Dollar cost of box creation, refresh or remodel</inlineHelpText>
    <label>Cost of Box (Marion Body Works)</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>