force-app/main/default/objects/Truck__c/fields/Date_Inactivated__c.field-meta.xml
<CustomField>
    <fullName>Date_Inactivated__c</fullName>
    <description>Replaced by date only field</description>
    <inlineHelpText>This is the Date the Truck was inactivated.</inlineHelpText>
    <label>*Delete*_Date Inactivated</label>
    <type>DateTime</type>
</CustomField>