force-app/main/default/objects/Truck__c/fields/Date_Truck_Inactivated__c.field-meta.xml
<CustomField>
    <fullName>Date_Truck_Inactivated__c</fullName>
    <description>Date the truck was inactivated</description>
    <inlineHelpText>This is the date the truck was inactivated</inlineHelpText>
    <label>Date Inactivated</label>
    <type>Date</type>
</CustomField>