force-app/main/default/objects/Truck__c/fields/Driver_Gas_Pin__c.field-meta.xml
<CustomField>
    <fullName>Driver_Gas_Pin__c</fullName>
    <label>*Delete* Driver/Gas Pin #</label>
    <length>16</length>
    <type>Text</type>
</CustomField>