force-app/main/default/objects/Truck__c/fields/Driver_Gas_Pin_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_Gas_Pin_Number__c</fullName>
    <description>Drivers gas PIN Number
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Drivers gas PIN Number</inlineHelpText>
    <label>Driver/Gas Pin Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>