force-app/main/default/objects/Truck__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <description>Name of Driver
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Name of Driver</inlineHelpText>
    <label>Driver Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>