force-app/main/default/objects/Truck__c/fields/GVW__c.field-meta.xml
<CustomField>
    <fullName>GVW__c</fullName>
    <label>GVW</label>
    <length>254</length>
    <type>Text</type>
</CustomField>