force-app/main/default/objects/Truck__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Height of box
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Height of box</inlineHelpText>
    <label>Height</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>