force-app/main/default/objects/Truck__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This indicated if a Truck is Active.</description>
    <inlineHelpText>This field indicates if a Truck is Active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>