force-app/main/default/objects/Truck__c/fields/IsExpirationEmailSent__c.field-meta.xml
<CustomField>
    <fullName>IsExpirationEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is &quot;hidden&quot; from page layouts and will be set in two ways.  The field will be CHECKED by a scheduled APEX job that looks for 120 days from the Truck.Mobile Expiration Date field and after the notification email is successfully sent.  The field will be UNCHECKED by a Workflow Field Update when the Truck.Mobile Expiration Date is updated by the user.</description>
    <label>*Delete*Expiration Email Sent</label>
    <type>Checkbox</type>
</CustomField>