force-app/main/default/objects/Truck__c/fields/Lease_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Exp_Date__c</fullName>
    <description>Lease Expiration Date
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Current Lease Expiration Date</inlineHelpText>
    <label>Lease Exp Date</label>
    <type>Date</type>
</CustomField>