force-app/main/default/objects/Truck__c/fields/Lease_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Lease_PO_Number__c</fullName>
    <description>Lease Purchase Order Number
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Lease Purchase Order Number</inlineHelpText>
    <label>Lease PO Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>