force-app/main/default/objects/Truck__c/fields/Lease_Purch_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Purch_Date__c</fullName>
    <description>Lease Purchased Date
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Lease Purchased Date</inlineHelpText>
    <label>Lease/Purch Date</label>
    <type>Date</type>
</CustomField>