force-app/main/default/objects/Truck__c/fields/Lease_Purch_Price__c.field-meta.xml
<CustomField>
    <fullName>Lease_Purch_Price__c</fullName>
    <description>Leased Purchased Price
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Leased Purchased Price</inlineHelpText>
    <label>Lease/Purch Price</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>