force-app/main/default/objects/Truck__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <description>Length of the box
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Length of the box</inlineHelpText>
    <label>Length</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>