force-app/main/default/objects/Truck__c/fields/Licensed_GVW__c.field-meta.xml
<CustomField>
    <fullName>Licensed_GVW__c</fullName>
    <label>Licensed GVW</label>
    <length>254</length>
    <type>Text</type>
</CustomField>