force-app/main/default/objects/Truck__c/fields/Mo_Lease_Expense__c.field-meta.xml
<CustomField>
    <fullName>Mo_Lease_Expense__c</fullName>
    <description>Monthly Lease Expense
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Monthly Lease Expense</inlineHelpText>
    <label>Mo Lease Expense</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>