force-app/main/default/objects/Truck__c/fields/Mobile_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Agreement_Date__c</fullName>
    <description>Mobile Agreement Date Signed
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Mobile Agreement Date Signed</inlineHelpText>
    <label>Mobile Agreement Date</label>
    <type>Date</type>
</CustomField>