force-app/main/default/objects/Truck__c/fields/Mobile_Agreement_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Agreement_Expiration_Date__c</fullName>
    <description>Mobile Agreement Expiration Date 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Mobile Agreement Expiration Date</inlineHelpText>
    <label>Mobile Agreement Expiration Date</label>
    <type>Date</type>
</CustomField>