force-app/main/default/objects/Truck__c/fields/Mobile_Agreement_ID__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Agreement_ID__c</fullName>
    <label>Mobile Agreement ID</label>
    <length>254</length>
    <type>Text</type>
</CustomField>