force-app/main/default/objects/Truck__c/fields/Mobile_Expiration_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Expiration_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Mobile Expiration Checkbox to indicate if the notification has been sent at 120 days.</description>
    <inlineHelpText>Mobile Expiration Checkbox to indicate if the notification has been sent at 120 days.</inlineHelpText>
    <label>*Delete*Mobile Expiration Email Sent</label>
    <type>Checkbox</type>
</CustomField>