force-app/main/default/objects/Truck__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>Model of the Truck
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Model of the Truck</inlineHelpText>
    <label>Model</label>
    <length>64</length>
    <type>Text</type>
</CustomField>