force-app/main/default/objects/Truck__c/fields/Name_on_Title__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Title__c</fullName>
    <description>Name on the Title
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Name on the Title</inlineHelpText>
    <label>Name on Title</label>
    <length>254</length>
    <type>Text</type>
</CustomField>