force-app/main/default/objects/Truck__c/fields/Ownership_Chassis_Box__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Chassis_Box__c</fullName>
    <label>Ownership Chassis/Box</label>
    <length>254</length>
    <type>Text</type>
</CustomField>