force-app/main/default/objects/Truck__c/fields/Pairs_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Pairs_Capacity__c</fullName>
    <description>Total number of pairs truck can box can hold
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Total number of pairs truck box can hold</inlineHelpText>
    <label>Pairs Capacity</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>