force-app/main/default/objects/Truck__c/fields/Security_Acct__c.field-meta.xml
<CustomField>
    <fullName>Security_Acct__c</fullName>
    <label>*Delete* Security Acct #</label>
    <length>254</length>
    <type>Text</type>
</CustomField>