force-app/main/default/objects/Truck__c/fields/Security_Acct_Number__c.field-meta.xml
<CustomField>
    <fullName>Security_Acct_Number__c</fullName>
    <description>Security Account Number
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Security Account Number</inlineHelpText>
    <label>Security Acct Number</label>
    <length>254</length>
    <type>Text</type>
</CustomField>