force-app/main/default/objects/Truck__c/fields/Security_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Security_Vendor__c</fullName>
    <description>Name of Security Vendor
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Name of Security Vendor</inlineHelpText>
    <label>Security Vendor</label>
    <length>254</length>
    <type>Text</type>
</CustomField>