force-app/main/default/objects/Truck__c/fields/Serial_No_BOX__c.field-meta.xml
<CustomField>
    <fullName>Serial_No_BOX__c</fullName>
    <description>Truck Box Serial Number
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Truck Box Serial Number</inlineHelpText>
    <label>Serial No (BOX)</label>
    <length>254</length>
    <type>Text</type>
</CustomField>