force-app/main/default/objects/Truck__c/fields/States_Trucks_Do_Business_In_8_07__c.field-meta.xml
<CustomField>
    <fullName>States_Trucks_Do_Business_In_8_07__c</fullName>
    <label>*Del*States Trucks Do Business In (8/07)</label>
    <length>254</length>
    <type>Text</type>
</CustomField>