force-app/main/default/objects/Truck__c/fields/States_Trucks_Do_Business_In__c.field-meta.xml
<CustomField>
    <fullName>States_Trucks_Do_Business_In__c</fullName>
    <description>States Truck does business in
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>States Truck does business in</inlineHelpText>
    <label>States Trucks Do Business In</label>
    <length>254</length>
    <type>Text</type>
</CustomField>