force-app/main/default/objects/Truck__c/fields/Title_Recd__c.field-meta.xml
<CustomField>
    <fullName>Title_Recd__c</fullName>
    <label>*Delete* Title Recd.</label>
    <length>254</length>
    <type>Text</type>
</CustomField>