force-app/main/default/objects/Truck__c/fields/Title_Received__c.field-meta.xml
<CustomField>
    <fullName>Title_Received__c</fullName>
    <description>Was title received?
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Was title received?</inlineHelpText>
    <label>Title Received</label>
    <length>254</length>
    <type>Text</type>
</CustomField>