force-app/main/default/objects/Truck__c/fields/Titled_To__c.field-meta.xml
<CustomField>
    <fullName>Titled_To__c</fullName>
    <label>Titled To:</label>
    <length>254</length>
    <type>Text</type>
</CustomField>