force-app/main/default/objects/Truck__c/fields/Truck_Description__c.field-meta.xml
<CustomField>
    <fullName>Truck_Description__c</fullName>
    <description>Description of Truck
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Description of Truck</inlineHelpText>
    <label>Truck Description</label>
    <length>254</length>
    <type>Text</type>
</CustomField>