force-app/main/default/objects/Truck__c/fields/Truck_Number_Unit_Number_for_Company__c.field-meta.xml
<CustomField>
    <fullName>Truck_Number_Unit_Number_for_Company__c</fullName>
    <description>Truck Number/Unit Number for Company
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Truck Number/Unit Number for Company</inlineHelpText>
    <label>Truck Number/Unit Number for Company</label>
    <length>32</length>
    <type>Text</type>
</CustomField>