force-app/main/default/objects/Truck__c/fields/Truck_Register_TID__c.field-meta.xml
<CustomField>
    <fullName>Truck_Register_TID__c</fullName>
    <description>The truck register terminal id used to identify the machine used for processing credit cards 
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>The truck register terminal id used to identify the machine used for processing credit cards  

Responsible Owner: Retail Accounting</inlineHelpText>
    <label>Truck Register TID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>