force-app/main/default/objects/Truck__c/fields/Truck_Type__c.field-meta.xml
<CustomField>
    <fullName>Truck_Type__c</fullName>
    <description>Truck type is either truck or trailer
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Truck type is either truck or trailer</inlineHelpText>
    <label>Truck Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>Truck and Trailer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>