force-app/main/default/objects/Truck__c/fields/Truck_VIN__c.field-meta.xml
<CustomField>
    <fullName>Truck_VIN__c</fullName>
    <label>*Delete* Truck VIN #</label>
    <length>254</length>
    <type>Text</type>
</CustomField>