force-app/main/default/objects/Truck__c/fields/Truck_VIN_Number__c.field-meta.xml
<CustomField>
    <fullName>Truck_VIN_Number__c</fullName>
    <description>Truck VIN Number
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Truck VIN Number</inlineHelpText>
    <label>Truck VIN Number</label>
    <length>254</length>
    <type>Text</type>
</CustomField>