force-app/main/default/objects/Truck__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>*Delete* Unit #</label>
    <length>32</length>
    <type>Text</type>
</CustomField>