force-app/main/default/objects/Truck__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <description>Unit Number
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Unit Number</inlineHelpText>
    <label>Unit Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>