force-app/main/default/objects/Truck__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>Width of Truck Box
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>Width of Truck Box</inlineHelpText>
    <label>Width</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>