force-app/main/default/objects/Truck__c/fields/Year_of_Truck__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Truck__c</fullName>
    <description>Year of Truck
Field Type: Store Data
Integrated: N</description>
    <inlineHelpText>What is the Year of the Truck</inlineHelpText>
    <label>Year of Truck</label>
    <length>4</length>
    <type>Text</type>
</CustomField>