force-app/main/default/objects/Truck__c/listViews/Active_Trucks.listView-meta.xml
<ListView>
    <fullName>Active_Trucks</fullName>
    <columns>IsActive__c</columns>
    <columns>NAME</columns>
    <columns>Unit_Number__c</columns>
    <columns>Year_of_Truck__c</columns>
    <columns>Model__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Mobile_Agreement_Date__c</columns>
    <columns>Date_Truck_Inactivated__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Trucks</label>
</ListView>