force-app/main/default/objects/Truck__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>IsActive__c</columns>
    <columns>NAME</columns>
    <columns>Unit_Number__c</columns>
    <columns>Year_of_Truck__c</columns>
    <columns>Model__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Mobile_Agreement_Date__c</columns>
    <columns>Date_Truck_Inactivated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>